# elastic-ai.preprocessor

./: .gitignore  README.md  devenv.nix  pyproject.toml
.github/workflows/: check-build.yml  check-lint.yml  check-tests.yml  release.yml
docs/: conf.py
elasticAI/creator_plugins/windower/: meta.toml
elasticAI/preprocessing/: __init__.py  _basics.py  _basics_test.py  _check_funcs.py  _check_funcs_test.py  _common_func.py  _common_func_test.py  _logger.py
elasticAI/preprocessing/filter/: filtering.py  filtering_test.py
elasticAI/preprocessing/framing/: __init__.py  frame_generator.py  frame_generator_test.py
elasticAI/preprocessing/sda/: sda.py  sda_test.py
elasticai/preprocessor/: _basics.py  _basics_test.py  _common_func.py  _common_func_test.py  waveform_generator.py  waveform_generator_test.py
equi_checker/: .gitignore  README.md  pyproject.toml
equi_checker/.hypothesis/constants/: 37c184117e10d7df  76cf6daace48edc3  90af7f22f6a94c18  da39a3ee5e6b4b0d
equi_checker/c_funcs/clamp/: clamp.c  clamp.h
equi_checker/c_funcs/downsampling/: downsampling.c  downsampling.h  downsampling_cdef.h
equi_checker/src/: equivalence.py  loader.py
equi_checker/tests/: test_clamp_property.py  test_downsampling.py  test_equivalence_example.py  test_intentional_fail.py  test_windower.py
plugins_c/spike_detection/: online_std_dev.h
plugins_python/c_filter/: filter_fir.py  filter_fir_all.py  filter_iir.py  filter_mavg.py
plugins_python/c_memory/: memory_test.py  waveform_lut.py
tests/: test_equivalence_example.py
tests/templates/: add.c
(+66 files in other folders)
