[project]
name = "elastic-ai-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fxpmath>=0.4.10",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "cffi>=2.0.0",
    "hypothesis>=6.152.9",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
