[project]
name = "function-equivalence-test"
version = "0.1.0"
description = "Framework for Enabling Hardware-Software Co-Design / Equivalence Checking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi",
    "hypothesis",
    "pytest",
    "numpy"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
