[project]
name = "function-equivalence-test"
version = "0.1.0"
description = "Framework for Enabling Hardware-Software Co-Design / Equivalence Checking"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cffi",
    "hypothesis",
    "pytest",
    "numpy",
    "setuptools>=82.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
